fixed alignment-content for easier readibility

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ nav {
     /* flex-direction: row-reverse; */
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-end;
     /* max-width:100%;  */
 
     /* margin: inherit -2em inherit -2em; */
